--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
                 <!--This is styles-->
 <body>
@@ -25,9 +26,19 @@
     <a href="https://www.w3schools.com">Visit W3Schools</a>
     <br>
     <br>
-    <img src="https://media.formula1.com/content/dam/fom-website/drivers/2023Drivers/leclerc.jpg.img.1536.medium.jpg/1700585208331.jpg" 
-    width="500" height="auto" >
-    <p style="color: red;">This is Charles Lechare.</p>
+
+    <div class="image1">
+        <div>
+            <img src="https://media.formula1.com/content/dam/fom-website/drivers/2023Drivers/leclerc.jpg.img.1536.medium.jpg/1700585208331.jpg" alt="Charles">        
+            <p style="color: red;" class="text">This is Charles Lechare.</p>       
+        </div>
+        <div>
+            <img src="https://media.formula1.com/content/dam/fom-website/drivers/2023Drivers/hamilton.jpg.img.1536.high.jpg" alt="Lewis">
+            <p style="color:black;" class="text">This is Lewis Hamilton.</p>
+        </div>
+    </div>
+
+    
     <p title="I'm a tooltip">This is a paragraph</p>
     <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
     <h1 style="font-size: 60px;">Heading</h1>
